[package]
name = "db-core"
version = "0.1.0"
edition = "2021"
description = "core database components for the project db-playground. "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
paste = "1.0.12"
rand = "0.8.5"
scc = "1.2.0"
typing = {path="../db-typing", package="db-typing"}
db_test = {path="../db-test", package="db-test"}
lazy_static = "1.4.0"
dashmap = "5.4.0"
revm-interpreter = "1.1.1"
revm-primitives = "1.1.1"
rand_chacha = "0.3.1"
core_affinity = "0.8.0"
flume = "0.10.14"
rand_xoshiro = "0.6.0"
crossbeam-channel = "0.5.8"

[features]
internal_info = []
